--- a/packages/web/public/index.html
+++ b/packages/web/public/index.html
@@ -24,11 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Tivit</title>
   </head>
-  <body>
+  <body style="margin: 0; height:100vh; min-height:100vh; max-height:100vh;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" style='height: inherit; background-color: whitesmoke;'></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
